create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3926,6 +3926,29 @@ body {
   height: 40px;
   border-radius: 50%;
 }
+.cid-qYxx6WMPI3 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-qYxx6WMPI3 .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qYxx6WMPI3 .section-text {
+  padding: 2rem 0;
+}
+.cid-qYxx6WMPI3 .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qYxx6WMPI3 .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-qYsakvlQz1 {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -5097,6 +5120,29 @@ body {
 .cid-qYsp1eObgf blockquote {
   color: #767676;
 }
+.cid-qYxxbFYhKW {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-qYxxbFYhKW .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qYxxbFYhKW .section-text {
+  padding: 2rem 0;
+}
+.cid-qYxxbFYhKW .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qYxxbFYhKW .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-qYsoYiGw4R {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -5596,6 +5642,29 @@ body {
 .cid-qYwof2e474 blockquote {
   color: #767676;
 }
+.cid-qYxxegK8DY {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-qYxxegK8DY .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qYxxegK8DY .section-text {
+  padding: 2rem 0;
+}
+.cid-qYxxegK8DY .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qYxxegK8DY .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-qYwoc8xFkt {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -6094,6 +6163,29 @@ body {
 .cid-qYxjR6q5cu .mbr-text,
 .cid-qYxjR6q5cu blockquote {
   color: #767676;
+}
+.cid-qYxxhYBiN9 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-qYxxhYBiN9 .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qYxxhYBiN9 .section-text {
+  padding: 2rem 0;
+}
+.cid-qYxxhYBiN9 .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qYxxhYBiN9 .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-qYxjGD0akX {
   padding-top: 60px;
